fix name/description overflow
added max-width on different elements to restrain the info thats being showed

* profiile__info-wrapper
* profile__info
* profile__description

--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -6,7 +6,6 @@
 }
 
 /* Container para o avatar */
-/* Container para o avatar */
 .profile__picture-container {
   position: relative;
   width: 120px;
@@ -50,10 +49,12 @@
   flex-direction: column;
   align-items: flex-start;
   margin: 22px 30px 21px;
+  max-width: 60%;
 }
 
 .profile__info {
   display: flex;
+  max-width: 100%;
 }
 
 .profile__name {
@@ -65,6 +66,8 @@
   font-size: 42px;
   line-height: 1.14;
   text-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .profile__description {
@@ -73,6 +76,10 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
+  text-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .profile__edit-button {
@@ -106,6 +113,10 @@
     padding: 5%;
   }
 
+  .profile__info-wrapper {
+    max-width: 40%;
+  }
+
   .profile__name {
     font-size: 30px;
   }
@@ -128,6 +139,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0;
+    max-width: 100%;
   }
 
   .profile__info {
